# AI-AT-ADVENT

./: .env.example  .gitattributes  .gitignore  AUDIT.md  CLAUDE.md  README.md  bootstrap.ps1  cash_flow.py  pyproject.toml  pytest.ini  requirements.txt  send_digest.py  setup.bat  setup.sh
.github/: dependabot.yml
deploy/: README.md  aaa.env.example  install.sh  rollback.sh  supabase_schema.sql  update.sh
docs/: .dashboard-content-hash  auto_overrides.json  benchmark.json  cycle_status.json  data_quality.json  improvements.json  index.html  self_grade.json  trades_recent.json  validation.json
scripts/: check_setup.py  plaid_link_setup.py
src/: apply_review.py  backtest.py  brokers_check.py  build_dashboard.py  email_sender.py  main.py  main_trading.py  news_fetcher.py  risk_allocator_check.py  run_daily_digest.py  run_orchestrator.py  run_research.py  run_scouts.py  run_strategic_review.py  summarizer.py
tests/: conftest.py  mock_broker.py  test_advanced_crypto_strategies.py  test_alert_dedup.py  test_alerts.py  test_allocator.py  test_audit_phase5_features.py  test_bootstrap_path.py  test_commodity_carry_backtest.py  test_crypto_basis_trade_backtest.py  test_crypto_funding_carry_backtest.py  test_daily_digest.py  test_dashboard.py  test_dashboard_broker_pnl.py  test_dashboard_freshness.py  test_dashboard_strategy_pnl.py  test_db_migrations.py  test_dual_momentum.py  test_equity_strategy_backtests.py  test_fill_polling.py  test_fomc_calendar_scrape.py  test_heartbeat.py  test_http_cache.py  test_kalshi_arb_backtest.py  test_legacy_strategies.py  test_macro_kalshi_backtest.py  test_macro_kalshi_v2.py  test_market_hours.py  test_multifactor_equity.py  test_new_data_sources.py  test_orchestrator_e2e.py  test_orchestrator_helpers.py  test_pead_backtest.py  test_phase5_strategies.py  test_regression_bugs.py  test_risk.py  test_risk_supabase_failover.py  test_scout_integrations.py  (+6 more)
(+149 files in other folders)
