[project]
name = "ai-at-advent"
version = "0.1.0"
description = "Multi-asset trading orchestrator with risk + allocator + scouts."
requires-python = ">=3.12,<3.13"
# Source-of-truth for production deps; `pip install .` installs these
# without needing requirements.txt. Keep aligned with requirements.txt.
dependencies = [
    "anthropic>=0.40.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.5.0",
    "numpy>=1.24.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# Start lenient; tighten after the codebase is clean. The signal we
# want NOW is unused imports, undefined names, and obvious bugs —
# not style purity.
select = [
    "E4",     # imports
    "E7",     # statements
    "E9",     # syntax errors
    "F",      # pyflakes (undefined names, unused imports)
    "B",      # flake8-bugbear (likely-bug patterns)
    "UP",     # pyupgrade (deprecated syntax)
]
ignore = [
    "E501",   # line too long — let formatter handle
    "E701",   # multiple statements on one line — used for `def foo(): ...` stubs
    "E402",   # module-level import not at top — we lazy-import to avoid
              # startup cycles (e.g. brokers.registry inside dashboard)
    "B008",   # Function call in default arg (we use field(default_factory=…))
    "UP042",  # str + Enum is fine; StrEnum migration is a separate cleanup
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]   # asserts are fine in tests
